--- a/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
@@ -7,14 +7,11 @@ function hunter_formhandler_init() {
     for (var i = 0; i < handlers_count; ++i) {
         var handler = hunter_formhandler_handlers[i];
         var form = $(handler.selector);
-        form.unbind('submit');
         form.attr('action', hunter_formhandler_action);
-        var hidden = $('<input type="hidden" name="hunter_form_id" value="">')
-        hidden.attr('value', handler.id);
-        form.append(hidden);
-        hidden = $('<input type="hidden" name="hunter_query" value="">')
-        hidden.attr('value', $(window.location.search.substring(1)));
-        form.append(hidden);
+        $('<input type="hidden" name="hunter_form_id" value="">').attr('value', handler.id).appendTo(form);
+        $('<input type="hidden" name="hunter_query" value="">').attr('value', window.location.search.substring(1)).appendTo(form);
+        form.unbind('submit');
+        form.find('*[type=submit]').unbind('click');
         form.submit(function(e) {
             $.ajax({
                 cache: false,
