--- a/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/api/form_handler.js.twig
@@ -16,10 +16,11 @@ function hunter_formhandler_init() {
             $.ajax({
                 cache: false,
                 data: $(this).serialize(),
-                dataType: 'json',
-                error: function() { alert('error'); /*$(location).attr('href', handler.error_redirect);*/ },
+                dataType: 'jsonp',
+                error: function() { $(location).attr('href', handler.error_redirect); },
+                jsonpCallback: 'hunter_formhandler_callback',
                 method: 'GET',
-                success: function(data) { alert(data); /*$(location).attr('href', handler.success_redirect);*/ },
+                success: function(data) { $(location).attr('href', handler.success_redirect); },
                 url: hunter_formhandler_action
             });
             e.preventDefault();
