--- a/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/add.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/form_handlers/add.html.twig
@@ -153,11 +153,22 @@
                     {{ form_widget(form.customerEmail) }} {{ form.customerEmail.vars.label }}
                 </label>
             </div>
+            {% set errors = form.customerEmailSubject.vars.errors %}
+            {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
+            <div class="{{ class }}">
+                {{ form_label(form.customerEmailSubject, null, {'label_attr': {'class': 'control-label'}}) }}
+                <span class="text-danger">*</span>
+                {{ form_widget(form.customerEmailSubject, {'attr': {'class': 'form-control'}}) }}
+                {% if errors|length > 0 %}
+                    {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
+                {% endif %}
+                <span class="help-block">Чтобы вставить значение параметра формы, напишите <code>%&lt;атрибут NAME параметра&gt;%</code>.</span>
+            </div>
             {% set errors = form.customerEmailTemplate.vars.errors %}
             {% set class = 'form-group' ~ (errors|length > 0 ? ' has-error' : '') %}
             <div class="{{ class }}">
                 {{ form_label(form.customerEmailTemplate, null, {'label_attr': {'class': 'control-label'}}) }}
-                {% if form.customerEmailTemplate.vars.required %}<span class="text-danger">*</span>{% endif %}
+                <span class="text-danger">*</span>
                 {{ form_widget(form.customerEmailTemplate, {'attr': {'class': 'form-control'}}) }}
                 {% if errors|length > 0 %}
                     {% for error in errors %}<span class="help-block text-danger">{{ error.message }}</span>{% endfor %}
@@ -190,10 +201,18 @@
                 fields_count++;
             });
             $('#{{ form.customerEmail.vars.id }}').change(function() {
-                if ($(this).is(':checked'))
-                    $('#{{ form.customerEmailTemplate.vars.id }}').parents('.form-group').stop(true, true).slideDown(250);
-                else
-                    $('#{{ form.customerEmailTemplate.vars.id }}').parents('.form-group').stop(true, true).slideUp(250);
+                var checked = $(this).is(':checked');
+                var subject = $('#{{ form.customerEmailSubject.vars.id }}');
+                var template = $('#{{ form.customerEmailTemplate.vars.id }}');
+
+                if (checked) {
+                    subject.prop('required', true).parents('.form-group').stop(true, true).slideDown(250);
+                    template.prop('required', true).parents('.form-group').stop(true, true).slideDown(250);
+                }
+                else {
+                    subject.prop('required', false).parents('.form-group').stop(true, true).slideUp(250);
+                    template.prop('required', false).parents('.form-group').stop(true, true).slideUp(250);
+                }
             }).change();
         });
     </script>
